Add SR-7784 apinotes issue