SR-7784/VersionedKit.framework/Headers/VersionedKit.h
@@ -1,0 +1,10 @@
+typedef enum {
+  AnonymousEnumA = 1,
+  AnonymousEnumB
+} AnonymousEnum;
+
+typedef enum NamedEnum {
+  NamedEnumA = 1,
+  NamedEnumB
+} NamedEnum;
+
