SR-7784/SR-7784.swift
@@ -1,0 +1,5 @@
+import VersionedKit
+
+print(NamedEnum.a)
+print(AnonymousEnum.a)
+
